<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewTitle1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|top"
        android:text="@string/app_logo_top"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size" />

    <TextView
        android:id="@+id/TextViewTitle2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_logo_bottom"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size" />

    <TextView
        android:id="@+id/TextViewVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:text="@string/app_version_info2"
        android:textColor="@color/version_color"
        android:textSize="@dimen/version_size" />

    <ImageView
        android:id="@+id/ImageViewLogo512"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/ok"
        android:src="@drawable/logo512" />
</LinearLayout>